media/css/theme.css
@charset "UTF-8";
/* CSS Document */
@font-face {
    font-family: "Helvetica";
    src: local("Helvetica"), url("/site_media/fonts/Helvetica/Helvetica.ttf");
}
@font-face {
    font-family: "Helvetica";
    src: local("Helvetica Bold"), local("Helvetica-Bold"), url("/site_media/fonts/Helvetica/Helvetica-Bold.ttf");
    font-weight: bold;
}
@font-face {
    font-family: "Helvetica";
    src: local("Helvetica Oblique"), local("Helvetica-Oblique"), url("/site_media/fonts/Helvetica/Helvetica-Oblique.ttf");
    font-style: italic, oblique;
}
@font-face {
    font-family: "Helvetica";
    src: local("Helvetica Bold Oblique"), local("Helvetica-BoldOblique"), url("/site_media/fonts/Helvetica/Helvetica-BoldOblique.ttf");
    font-weight: bold;
    font-style: italic, oblique;
}

* { font-family: "Helvetica", Arial, sans-serif; }

body {
  padding-top: 50px;
  padding-bottom: 30px;
  padding-left: 15px;
  padding-right: 15px;
}

.bgimg {
  background-image: url("/site_media/images/group/bg_rna.png");
  background-repeat: no-repeat;
  background-position: right 200px bottom 25px;
  background-size: 30%;
}
.bgimg2 {
  background-image: url("/site_media/images/group/bg_rna_2.png");
  background-repeat: no-repeat;
  background-position: right 25px bottom 25px;
  background-size: 50%;
}

html { 
  overflow-y: scroll; 
}

label {
  font-weight: normal;
}

.starter-template {
  padding: 40px 15px 15px 15px;
}

.theme-dropdown .dropdown-menu {
  position: static;
  display: block;
  margin-bottom: 20px;
}
.theme-showcase > p > .btn {
  margin: 5px 0;
}

.navbar {
  background-color: #2da89c;
  /*border-color: #112d52;*/
}
.navbar .navbar-brand {
  color: #fff;
  font-weight: bold;
  /*background-image: url("/site_media/images/group/bg_rna.png");*/
  background-size: cover;
  background-repeat: no-repeat;
}
.navbar .navbar-brand:hover, .navbar .navbar-brand:focus {
  color: #fec78a;
  text-decoration: blink;
}
/*.navbar .navbar-icon {
  border-left: 1px solid #209874;
}*/
.navbar .navbar-nav > li > a {
  color: #fff;
}
.navbar .navbar-nav > li > a:hover, .navbar .navbar-nav > li > a:focus {
  color: #fff;
  background-color: #209874;
  text-shadow: 2px 2px 5px #7cafd3;
}
.navbar .navbar-nav > .active > a, .navbar .navbar-nav > .active > a:hover, .navbar .navbar-nav > .active > a:focus {
  color: #fff;
  background-color: #209874;
  text-decoration: underline;
  text-shadow: 2px 2px 5px #ff0;
}
.navbar .navbar-nav > .open > a, .navbar .navbar-nav > .open > a:hover, .navbar .navbar-nav > .open > a:focus {
  color: #fff;
  background-color: #209874;
}
.navbar .navbar-toggle {
  border-color: #112d52;
}
.navbar .navbar-toggle:hover, .navbar .navbar-toggle:focus {
  background-color: #112d52;
}
.navbar .navbar-toggle .icon-bar {
  background-color: #7cafd3;
}
.navbar .navbar-collapse,
.navbar .navbar-form {
  border-color: #7cafd3;
}
.navbar .navbar-link {
  color: #7cafd3;
}
.navbar .navbar-link:hover {
  color: #fff;
}
@media (max-width: 767px) {
  .navbar .navbar-nav .open .dropdown-menu > li > a {
    color: #7cafd3;
  }
  .navbar .navbar-nav .open .dropdown-menu > li > a:hover, .navbar .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #fff;
  }
  .navbar .navbar-nav .open .dropdown-menu > .active > a, .navbar .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #fff;
    background-color: #112d52;
  }
}

.nav-pills {
  color: #fff;
}
.nav-pills > li > a {
  border-radius: 0;
}

.nav-icon {
  padding-left: 30px;
}
ul.nav-li-sub {
  list-style-type: none;
  padding-left: 5px;
}

li.nav-li > a, li.nav-ul > a  {
  color: #9fa7af;
  font-weight: normal;
}

li.nav-li:hover, li.nav-li:hover > a, li.nav-ul > a:hover {
  background-color: #004365;
  color: #fff;
  text-shadow: 2px 2px 5px #7cafd3; 
  text-decoration: none;
}

li.nav-li.active, li.nav-li.active:hover, li.nav-li.active:focus, li.nav-li.active > a, li.nav-li.active > a:hover, li.nav-li.active > a:focus {
  background-color: #29be92;
  color: #fff;
  font-weight: bold;
}

li.nav-ul > a.active {
  background-color: #5496d7;
  color: #fff;
}
li.nav-ul > a.active:hover, li.nav-ul > a.active:focus {
  background-color: #7cafd3;
  color: #fff;
  font-weight: bold !important;
  text-shadow: 2px 2px 5px #7cafd3;
}
.nav-ul-lg {
  display: none;
}
.nav-ul-lg > a > span.lead {
  margin-bottom: 0px;
}

.nav-panel{
    border-style: solid;
    border-radius: 5px;
    border-width: 1px;
    border-color: #112d52;
}

.nav-list{
  padding-left: 20px;
  color: #000;
}

.tutorial{
  opacity:0.5;
}


a:link, a:visited {
  color: #011e46;
  text-decoration: none;
}

a:hover {
  color: #7cafd3;
  text-decoration: underline;
}

h1.section {
  background-color: #000;
  color: #7cafd3;
  padding: 15px;
  box-shadow: 0 0 15px #000;
  -moz-box-shadow: 0 0 15px #000;
  -webkit-box-shadow: 0 0 15px #000;
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
}

h1.section>span.sec {
  color: #fff;
}

h1.section>span.num {
  color: #ff0;
}

.comment {
  color: #080;
  font-style: italic;
}

.excerpt {
  overflow: hidden;
  text-overflow: ellipsis;
  height: 2.8em;
}

.excerpt:hover {
  height: auto;
}

.popover-title{
    background-color: #000;
    border-color: #fbad24;
    color: #fff;
    opacity:0.9;
}

.popover-content {
    background-color: #000;
    border-color: #fbad24;
    color: #7cafd3;
    opacity:0.8;
}

.place_holder {
  height: 200px;
  background-size: 96px;
  opacity: 0.5;
  background-color: #fff;
  background-repeat: no-repeat;
  background-image: url("/site_media/images/group/fg_load_2.gif");  
  background-position: center;
}

#wait.modal {
  display:    none;
  position:   fixed;
  z-index:    99999;
  top:        0;
  left:       0;
  height:     100%;
  width:      100%;
  background-position: center center;
  background-size: 192px;
  opacity: 0.5;
  background-color: #fff;
  background-repeat: no-repeat;
  background-image: url("/site_media/images/group/fg_load_2.gif");  
}

.modal-dialog { 
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) !important;
    -ms-transform: translate(-50%, -50%) !important;
    -webkit-transform: translate(-50%, -50%) !important;
}

@media (min-width: 979px) {
  #sidebar.affix-top {
    position: static;
    margin-top: 75px;
  }
  
  #sidebar.affix {
    position: fixed;
    top: 75px;
  }
}

.affix,.affix-top {
   position:static;
}

.fileUpload {
  position: relative;
  overflow: hidden;
  margin: 0;
}
.fileUpload input {
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  padding: 0;
  font-size: 20px;
  cursor: pointer;
  opacity: 0;
  filter: alpha(opacity=0);
}

.btn-inverse {
  background-color: #000;
  color: #fff;
}

.btn-inverse:hover {
  background-color: #333;
  color: #fff;
}

a.btn {
  color: #fff !important;
}

a.btn-default {
  color: #000 !important;
}

img.logo {
  clear: both;
  float: right;
  padding-left: 10px;
  padding-bottom: 5px;
  height: 72px;
}

.test {
  border: #0f0 solid 2px;
}





#wrapper {
  padding-left: 235px;
  transition: all 0.4s ease 0s;
}
#sidebar-wrapper {
  margin-left: -250px; left: 250px;
  width: 250px; height: 100%;
  background-color: #112539;
  position: fixed; overflow-y: auto;
  z-index: 1000;
  transition: all 0.4s ease 0s;
}
#page-content-wrapper {
  padding-left: 0px;
  width: 100%;
}

@media (max-width:767px) {

    #wrapper {
      padding-left: 0;
    }

    #sidebar-wrapper {
      left: 0;
    }

    #wrapper.active {
      position: relative;
      left: 250px;
    }

    #wrapper.active #sidebar-wrapper {
      left: 250px;
      width: 250px;
      transition: all 0.4s ease 0s;
    }

}

